plugins {
    id 'java'
}

group 'com.mohamnag.binance-client'
version '1.0.0' + (project.findProperty('snapshot') == 'false' ? '' : '-SNAPSHOT')

java {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
    // TODO: 07.05.21 check if we really need this
    implementation 'org.apache.commons:commons-lang3:3.6'

    testImplementation 'junit:junit:4.+'
}
